// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render summary for multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    3
     
    expenses
     totalling 
    $23.00
  </h1>
</div>
`;

exports[`should correctly render summary for one expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $2.30
  </h1>
</div>
`;
